4) quagga: up to 1.0.20160315 version.<br>
5) netcwnmp: rewrite for support cwmp 1.0.0 (tested with acs-test_1.0.14.01_amd64).<br>
6) libnvram: always use safe version of free.<br>
7) busybox: udhcpd: keep expired leases at startup.<br>
8) system: enable ripd support (fixed in last quagga).<br>
9) kernel: ralink_arch: fix build without pci-e port2 enabled (tube sample).<br>
10) kernel: ralink_raeth: apply GRO changes for our 3.4 tree.<br>
11) kernel: add cryptodev-linux driver 1.8 (http://cryptodev-linux.org).<br>
12) kernel: add AES Engine driver for MT7628 (fully code refactoring).<br>
13) kernel: mips: traps: fix SIGFPE information leak from `do_ov' and `do_trap_or_bp'.<br>
14) kernel: mips: c-r4k: revert fix cache flushing for MT cores (prepare for apply reworked version).<br>
15) kernel: mips: cache flush functions are reworked.<br>
16) kernel: mips: fix bug in using flush_cache_vunmap.<br>
17) kernel: net: fastpaths: remove old ugli hack and move flags to end of cb (fix compath with new GRO logic).<br>
18) kernel: net: csum: update csum_block_add to use rotate instead of byteswap.<br>
19) kernel: net: ppp: ensure file->private_data can't be overridden.<br>
20) kernel: net: vlan: propagate gso_max_segs.<br>
21) kernel: net: gro: selective flush of packets.<br>
22) kernel: net: gro: fix possible panic in skb_gro_receive().<br>
23) kernel: net: gro: add checksuming helpers.<br>
24) kernel: net: gro: only verify TCP checksums for candidates.<br>
25) kernel: net: gro: clean up tcpX_gro_receive checksum verification.<br>
26) kernel: net: gro: change GRO overflow strategy.<br>
27) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
28) kernel: net: ipv6: gro: fix IPV6_GRO_CB(skb)->proto problem.<br>
29) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
30) kernel: usb: qmi_wwan: add Sierra Wireless EM74xx device ID, Gemalto's Cinterion PHxx.<br>
31) kernel: usb: usbnet: cleanup after bind() in probe().<br>
<br>
<br>
<br>