@@ -1873,6 +1873,7 @@
 29) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
 30) kernel: usb: qmi_wwan: add Sierra Wireless EM74xx device ID, Gemalto's Cinterion PHxx.<br>
 31) kernel: usb: usbnet: cleanup after bind() in probe().<br>
+32) kernel: usb: cdc_ncm: toggle altsetting to force reset before setup, do not call usbnet_link_change from cdc_ncm_bind.<br>
 <br>
 <br>
 <br>
